force-app/main/default/objects/ZoomConfig__mdt/fields/SMS_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Client_Id__c</fullName>
    <label>SMS Client Id</label>
    <type>Text</type>
    <length>255</length>
    <description>Zoom Marketplace app Client Id used by ZoomSMSIntegration - a separate app from ClientId__c/ClientSecret__c (same Zoom account, different app/credentials), so it has its own field rather than overloading the main one.</description>
</CustomField>