force-app/main/default/objects/ZoomConfig__mdt/fields/Webhook_Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret_Token__c</fullName>
    <label>Webhook Secret Token</label>
    <type>Text</type>
    <length>255</length>
    <description>Secret Token from the Zoom Marketplace app's Event Subscriptions feature, used to validate the x-zm-signature header on inbound webhook requests in ZoomPhoneWebhookHandler.</description>
</CustomField>